SFDCProject/src/objects/Partner_Api_Default_Value__c.object
<CustomObject>
    <description>This object is used to store all default/overridden field values for various Partner APIs like Lead API, Opty API etc.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Indicate if this config is active or not. If not active, then this configuration is not considered for processing. You can use this field to temporarily remove the configuration.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Api__c</fullName>
        <inlineHelpText>This indicates the API endpoint to which this field default is applicable. If this is applicable for all endpoints, then specify All.</inlineHelpText>
        <label>Api</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LeadApiCreateLead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Input_Field__c</fullName>
        <inlineHelpText>Input field name. This must be the Rest field of the input request.</inlineHelpText>
        <label>Input Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input_Value__c</fullName>
        <inlineHelpText>This is the value that should be compared with incoming &quot;input field&quot; value. If values matches, then Output field and Output Field value would be considered.</inlineHelpText>
        <label>Input Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Output_Field__c</fullName>
        <inlineHelpText>This is the field that would be added to the input request, if input field value criteria matches.</inlineHelpText>
        <label>Output Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Output_Value__c</fullName>
        <inlineHelpText>This is the value that would be set in the input request for default field, if input field criteria matches.</inlineHelpText>
        <label>Output Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Indicates how this configuration should be processed. If type is &quot;Default&quot;, then value is applied only if input request doesn&apos;t have that field populated. If type is &quot;Override&quot;, then configured value is always applied irrespective of input field value.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Override</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Partner Api Default Value</label>
    <listViews>
        <fullName>Comcast_Lead</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Api__c</columns>
        <columns>Input_Field__c</columns>
        <columns>Input_Value__c</columns>
        <columns>Output_Field__c</columns>
        <columns>Output_Value__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Input_Value__c</field>
            <operation>contains</operation>
            <value>Comcast</value>
        </filters>
        <label>Comcast_Lead</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LGCY_Comcast</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Api__c</columns>
        <columns>Input_Field__c</columns>
        <columns>Input_Value__c</columns>
        <columns>Output_Field__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Input_Value__c</field>
            <operation>contains</operation>
            <value>Comcast</value>
        </filters>
        <label>LGCY Comcast</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sunrun_Comcast_LGCY</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Api__c</columns>
        <columns>Input_Field__c</columns>
        <columns>Input_Value__c</columns>
        <columns>Output_Field__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Input_Value__c</field>
            <operation>contains</operation>
            <value>Sunrun,Comcast,LGCY</value>
        </filters>
        <label>Sunrun / Comcast / LGCY View</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PAD-{0000000000}</displayFormat>
        <label>Partner Api Default Value#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Api Default Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>